--- a/poetryclub.css
+++ b/poetryclub.css
@@ -225,16 +225,13 @@ table {width:100%;}
 
 footer {
 	margin-bottom:0px;
+	text-align:center;
 	background:#f5f5f5;
 	letter-spacing:2px;
 	padding:40px 60px;
 	text-transform:uppercase;
 	font-size:0.75em;
 	font-weight:bold;
-	-moz-column-count:2;
-	-webkit-column-count:2;
-	column-count:2;
-	column-gap:10%;
 }
 
 footer p:nth-child(1) {
