--- a/poetryclub.css
+++ b/poetryclub.css
@@ -5,7 +5,7 @@
 	.slider {display:none;}
 	.panel {display:none;}
 	header {border:1px solid #eee;}
-	section {background:#ffffff; padding:3%;}
+	section {background:#ffffff; padding:3%;margin:2%;}
 }
 
 @media only screen and (min-width:769px) {
