--- a/poetryclub.css
+++ b/poetryclub.css
@@ -1,12 +1,11 @@
 /* Responsive */
 
 @media only screen and (max-width:769px) {
-	body {width:100%;}
 	.slider {display:none;}
 	.panel {display:none;}
 	header {border:1px solid #eee;}
 	#title {font-size:2em;}
-	section {background:#ffffff; padding:3%;}
+	section {background:#ffffff; padding:2%;min-width:80%;}
 }
 
 @media only screen and (min-width:769px) {
