--- a/poetryclub.css
+++ b/poetryclub.css
@@ -1,11 +1,11 @@
 /* Responsive */
 
 @media only screen and (max-width:769px) {
+	.container-fluid {min-width:100%;}
 	.slider {display:none;}
 	.panel {display:none;}
-	header {border:1px solid #eee;}
-	#title {font-size:5em;}
-	section {background:#ffffff; padding:2%;min-width:100%;}
+	header #title {font-size:5em;}
+	section {background:#ffffff;padding:1%;}
 }
 
 @media only screen and (min-width:769px) {
