--- a/poetryclub.css
+++ b/poetryclub.css
@@ -4,8 +4,9 @@
 	.container-fluid {min-width:100%;}
 	.slider {display:none;}
 	.panel {display:none;}
-	header #title {font-size:5em;}
-	section {background:#ffffff;padding:1%;}
+	header #title {font-size:4em;line-height:3.5em;}
+	section {background:#ffffff;padding:2%;}
+	main {margin:0% -8%;
 }
 
 @media only screen and (min-width:769px) {
