--- a/poetryclub.css
+++ b/poetryclub.css
@@ -5,8 +5,8 @@
 	.slider {display:none;}
 	.panel {display:none;}
 	header #title {font-size:1.7em;}
-	section {background:#ffffff;padding:2%;min-width:80%;}
-	main {margin:0% -8%;
+	section {background:#ffffff;padding:2%;}
+	main {margin:0% -8%;}
 }
 
 @media only screen and (min-width:769px) {
