--- a/poetryclub.css
+++ b/poetryclub.css
@@ -6,7 +6,7 @@
 	.panel {display:none;}
 	header #title {font-size:110%;}
 	section {background:#ffffff;padding:2%;}
-	main {margin:0% -8%;min-width:80%;}
+	main {margin:0% -5%;
 }
 
 @media only screen and (min-width:769px) {
@@ -33,8 +33,6 @@
 html, body {
 	margin:0px;
 	padding:0px;
-	width:100%;
-	height:100%;
 }
 
 .container-fluid {
