--- a/poetryclub.css
+++ b/poetryclub.css
@@ -6,6 +6,7 @@
 	.panel {display:none;}
 	header {border:1px solid #eee;}
 	section {background:#ffffff; padding:3%;}
+	main {margin:0% -5%;
 }
 
 @media only screen and (min-width:769px) {
