--- a/poetryclub.css
+++ b/poetryclub.css
@@ -1,7 +1,7 @@
 /* Responsive */
 
 @media only screen and (max-width:769px) {
-	body {width:100%;}
+	body {min-width:100%;}
 	.slider {display:none;}
 	.panel {display:none;}
 	header {border:1px solid #eee;}
