--- a/poetryclub.css
+++ b/poetryclub.css
@@ -1,251 +1,234 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>EHS Poetry Club</title>
-<meta name=viewport content="width=700, initial-scale=0.45, maximum-scale=1, user-scalable=yes">
-<link href="https://fonts.googleapis.com/css?family=Old+Standard+TT|Source+Sans+Pro" rel="stylesheet">
-<link rel="stylesheet" href="poetryclub.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="poetryclub.js"></script> 
-</head>
+/* Responsive */
+
+@media only screen and (max-width:769px) {
+	.container-fluid {min-width:100%;}
+	.slider {display:none;}
+	.panel {display:none;}
+	section {background:#ffffff; padding:3%;}
+}
+
+@media only screen and (min-width:769px) {
+	section {display:none;}
+}
+
+/* Scrollbar */
+
+::-webkit-scrollbar {
+	width:7px;
+	background:#eee;
+}
+
+::-webkit-scrollbar-thumb {
+	background:#000;
+}
+
+/* Main */
+
+#pageload {
+	display:none;
+}
+
+html, body {
+	margin:0px;
+	padding:0px;
+}
+
+.container-fluid {width:100%;}
+
+header {text-align:center;}
+
+#title {
+	padding:8% 5%;
+	font:normal 3em  "old standard tt", calibri, serif;
+	background:#ffffff;
+	text-transform:uppercase;
+	letter-spacing:20px;
+}
+
+nav {
+	margin-left:-5%;
+	padding:15px;
+	background:#f5f5f5;
+}
+
+nav a {
+	margin-left:5%;
+	text-transform:uppercase;
+	font-size:0.85em;
+	letter-spacing:2px;
+}
+
+nav a:hover {color:#A78BC9;}
+
+body {font:normal 13.5px "source sans pro", calibri, sans-serif;}
+
+h1, h2, #title {font-family:"old standard tt", calibri, serif;}
+
+h1, h2 {text-transform:uppercase;letter-spacing:2px;color:#000000;}
+h1 {font-size:1.3em;}
+h2 {font-size:1.2em;}
+
+a {
+	color:#878787;
+	text-decoration:none;
+	-o-transition:0.6s;
+	-moz-transition:0.6s;
+	-webkit-transition:0.6s;
+	transition:0.6s;
+}
+
+a:hover {
+	color:#444E84;
+	-o-transition:0.6s;
+	-moz-transition:0.6s;
+	-webkit-transition:0.6s;
+	transition:0.6s;
+}
+
+ul {
+	padding:5px;
+	color:#505050;
+	list-style-type:circle;
+}
+
+/* Slider */
+
+.slider {
+	padding:8% 0%;
+	background:#E8EAF2;
+}
+
+.arrow-left, .arrow-right {
+	background:rgba(255, 255, 255, 0.9);
+	cursor:pointer;
+	margin-top:5%;
+	width:7%;
+	display:inline-block;
+}
+
+.arrow-left:hover, .arrow-right:hover {
+	background:rgba(255, 255, 255, 0.5);
+}
+
+.arrow-left {float:left;}
+.arrow-right {float:right;}
+
+#slides {
+	display:inline-block;
+	position:relative;
+	width:55%;
+	margin:0% 15%;
+}
+
+.slide:nth-child(1) {
+	text-align:center;
+}
+
+.slide:nth-child(1) p {
+	margin-top:30%;
+}
+
+.slide {
+	background:#ffffff;
+	padding:5%;
+	height:500px;
+	overflow:scroll;
+	overflow-x:hidden;
+	display:none;
+}
+
+.active-slide {
+	display:block;
+}
+
+/* Panels */
+
+.panels {
+	padding:8%;
+	background:#D9DFE9;
+}
+
+.panel {
+	font-size:1.4em;
+	font-weight:bold;
+	text-align:center;
+	text-transform:uppercase;
+	letter-spacing:10px;
+	padding:10% 5%; 
+	margin-bottom:0.5%;
+	color:#E2E3EF;
+	background:#3a3a3a;
+	-o-transition:0.5s;
+	-moz-transition:0.5s;
+	-webkit-transition:0.5s;
+	transition:0.5s;
+}
+
+.panel:hover, .activePanel {
+	background:#f5f5f5;
+	color:#3a3a3a;
+	letter-spacing:20px;
+}
+
+#panel, #panel2, #panel3, .close {cursor:pointer;}
 
 
-<body id="pageload">
+/* Modal */
 
-<div class="modal" id="modal">
-<div id="modalcontainer">
-<div class="close"><img src="http://image.flaticon.com/icons/svg/61/61155.svg" width="10px" /></div>
-<div class="modalinfo">
-<div id="about">
-<h2>What is Poetry Club?</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-</div>
-</div>
-</div>
-</div>
+.close {float:right;}
 
-<div class="modal" id="modal2">
-<div id="modalcontainer2">
-<div class="close"><img src="http://image.flaticon.com/icons/svg/61/61155.svg" width="10px" /></div>
-<div class="modalinfo">
-<h2>Links & Contact</h2>
-<table id="contact">
-	<tr id="contactmain">
-		<td>Email</td> 
-		<td><a href="mailto:ehspoetryclub@gmail.com">ehspoetryclub@gmail.com</a></td> <!-- President Contact Info -->
-	</tr>
-</table>
-<ul>
-	<li><a href="http://www.poets.org">Academy of American Poets</a> </li>
-	<li><a href="http://www.poetryfoundation.org">Poetry Foundation</a> </li>
-	<li><a href="https://www.youtube.com/user/ButtonPoetry">Button Poetry on Youtube</a></li>
-</ul>
-</div>
-</div>
-</div>
+.modal {
+	z-index:9;
+	display:none;
+	background:rgb(0,0,0);
+	background:rgba(0,0,0,0.7);
+	width:100%;
+	height:100%;
+	position:fixed;
+}
 
-<div class="modal" id="modal3">
-<div id="modalcontainer3">
-<div class="close"><img src="http://image.flaticon.com/icons/svg/61/61155.svg" width="10px" /></div>
-<div class="modalinfo">
-<table id="calendar">
-	<tr id = "month1">
-		<td>
-			<h2>August</h2>
-				<ul>
-				<li>Day</li>
-				<li>Day</li>
-				</ul>
-		</td>
-		<td>
-			<h2>September</h2>
-				<ul>
-				<li>22th: No Meeting</li>
-				<li>Day</li>
-				</ul>
-		</td>
-		<td>
-			<h2>October</h2>
-				<ul>
-				<li>Day</li>
-				<li>Day</li>
-				</ul>
-		</td>
-	</tr>
-	<tr id="month2">
-		<td>
-			<h2>November</h2>
-				<ul>
-				<li>3rd: Poetry Slam</li>
-				<li>17th: No Meeting</li>
-				</ul>
-		</td>
-		<td><h2>December</h2>
-				<ul>
-				<li>Day</li>
-				<li>Day</li>
-				</ul>
-		</td>
-		<td>
-			<h2>January</h2>
-				<ul>
-				<li>26th: No Meeting</li>
-				<li>Day</li>
-				</ul>
-		</td>
-	</tr>
-	<tr id="month3">
-		<td>
-			<h2>February</h2>
-				<ul>
-				<li>Day</li>
-				<li>Day</li>
-				</ul>
-		</td>
-		<td>
-			<h2>March</h2>
-				<ul>
-				<li>16th: No Meeting</li>
-				<li>Day</li>
-				</ul>
-		</td>
-		<td>
-			<h2>April</h2>
-				<ul>
-				<li>20th: No Meeting</li>
-				<li>Day</li>
-				</ul>
-		</td>
-	</tr>
-	<tr id="month4">
-		<td>
-			<h2>May</h2>
-				<ul>
-				<li>11th: No Meeting</li>
-				<li>Day</li>
-				</ul>
-		</td>
-	</tr>
-</table>
-</div>
-</div>
-</div>
-</div>
+#modalcontainer, #modalcontainer2, #modalcontainer3 {
+	background:#fff;
+	border:1px solid #eee;
+	padding:25px;
+	height:65%;
+	width:65%;
+	margin-top:6%;
+	margin-left:15.90%;
+	overflow-y:scroll;
+	overflow-x:hidden;
+}
 
+.modalinfo {
+	padding:30px 25px;
+}
+	
+.modal h2, #calendar2 h2 {
+	margin-left:0px;
+}
 
-<!-- Main (> 769px devices) --->
+#contact td:nth-child(odd) {
+	font-weight:bold;
+}
 
-<div class="container-fluid">
-<header>
-<div id="title">EHS Poetry Club</div>
-<nav>
-<a href="http://www.ecusd7.org/ehs/">Return to EHS</a>
-<a href="/">Return to Index</a>
-</nav>
-</header>
+table {width:100%;}
 
+#modalcontainer2 ul {padding-left:2%;}
+#modalcontainer3 ul, #calendar2 ul {padding-left:5%;}
 
-<!--- Slider of Selected Poems --->
+/* Footer */
 
-<main>
+footer {
+	margin-bottom:0px;
+	text-align:center;
+	background:#f5f5f5;
+	letter-spacing:2px;
+	padding:40px 60px;
+	text-transform:uppercase;
+	font-size:0.8em;
+	font-weight:bold;
+}
 
-<!-- Panels --->
-<div class="panels">
-<div class="panel" id="panel">
-About
-</div>
-
-<section id="about2">
-<!-- Clone -->
-</section>
-
-
-
-
-<div class="panel" id="panel2">
-Links & Contact
-</div>
-
-<section id="contact2">
-<h1>Contact</h1>
-<table id="contact2">
-<!-- Clone -->
-</table>
-</section>
-
-
-
-<div class="panel" id="panel3">
-Calendar
-</div>
-
-<section id="calendar2">
-<h1>Calendar</h1>
-<table id="calendar2">
-<!-- Clone -->
-</table>
-</section>
-
-</div>
-
-<!--- Slider -->
-
-<div class="slider">
-<div class="arrow-left"><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-left-128.png" width="90%"/></div>
-
-<div id="slides">
-<div class="slide active-slide">
-<p><h1>Selected Poems</h1>
-<h2>Curated by the Poetry Club</h2>
-</div>
-
-<div class="slide">  
-<p>Poems!</p>
-</div>
-
-<div class="slide">
-<p>slide3</p>
-</div>
-
-<div class="slide">
-<iframe width="100%" height="99%" src="https://www.youtube.com/embed/dh5wSt-hfL0" frameborder="0" allowfullscreen></iframe>
-</div>
-
-<div class="slide">
-<p>slide5</p>
-</div>
-
-<div class="slide">
-<iframe width="100%" height="99%" src="https://www.youtube.com/embed/WkNp56UZax4" frameborder="0" allowfullscreen></iframe>
-</div>
-
-</div>
-
-<div class="arrow-right"><img src="http://www.hamiltonkent.com/media/2428/icon-ios7-arrow-right-128.png" width="90%"/></div>
-</div>
-
-</main>
-
-<footer>
-<p><a href="/">
-<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" enable-background="new 0 0 32 32" viewBox="0 0 32 32" x="0px" y="0px" width="50px" height="50px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
-<path fill="#444444" d="M 32 6.1 c -1.2 0.5 -2.4 0.9 -3.8 1 c 1.4 -0.8 2.4 -2.1 2.9 -3.6 c -1.3 0.8 -2.7 1.3 -4.2 1.6 C 25.7 3.8 24 3 22.2 3 c -3.6 0 -6.6 2.9 -6.6 6.6 c 0 0.5 0.1 1 0.2 1.5 C 10.3 10.8 5.5 8.2 2.2 4.2 c -0.6 1 -0.9 2.1 -0.9 3.3 c 0 2.3 1.2 4.3 2.9 5.5 c -1.1 0 -2.1 -0.3 -3 -0.8 c 0 0 0 0.1 0 0.1 c 0 3.2 2.3 5.8 5.3 6.4 c -0.6 0.1 -1.1 0.2 -1.7 0.2 c -0.4 0 -0.8 0 -1.2 -0.1 c 0.8 2.6 3.3 4.5 6.1 4.6 c -2.2 1.8 -5.1 2.8 -8.2 2.8 c -0.5 0 -1.1 0 -1.6 -0.1 C 2.9 27.9 6.4 29 10.1 29 c 12.1 0 18.7 -10 18.7 -18.7 c 0 -0.3 0 -0.6 0 -0.8 C 30 8.5 31.1 7.4 32 6.1 Z" />
-</svg>
-</a>
-<a href="/"> 
-<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" enable-background="new 0 0 32 32" viewBox="0 0 32 32" x="0px" y="0px" width="50px" height="50px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
-<path fill="#444444" d="M 0 0 v 32 h 32 V 0 H 0 Z M 20.2 10.7 l -1.5 0 c -1.2 0 -1.4 0.6 -1.4 1.4 v 1.8 h 2.8 l -0.4 2.8 h -2.4 V 24 h -2.9 v -7.3 h -2.5 v -2.8 h 2.5 v -2.1 C 14.3 9.3 15.8 8 18 8 c 1 0 1.9 0.1 2.2 0.1 V 10.7 Z" />
-</svg>
-</a>
-</p>
-
-<p>Sponsored by Mrs. Mercer</p>
-<p>Website by Robin Luo</p>
-<p>(2016)</p>
-</footer>
-
-</div>
-
-</body>
-
-</html>
+footer p:nth-child(1) {
+	padding-bottom:5px;
+}
