--- a/poetryclub.css
+++ b/poetryclub.css
@@ -5,7 +5,7 @@
 	.slider {display:none;}
 	.panel {display:none;}
 	header #title {font-size:1.8em;}
-	nav a {margin-right:10px;}
+	nav a {font-size:0.6em;}
 	section {background:#ffffff; padding:5%;}
 	main {margin:0% -3%;}
 }
