--- a/poetryclub.css
+++ b/poetryclub.css
@@ -5,10 +5,10 @@
 	.slider {display:none;}
 	.panel {display:none;}
 	header #title {font-size:1.8em;}
-	nav a {display:none;}
+	nav a {font-size:0.5em;}
 	footer a:last-child {display:block;}
 	section {background:#ffffff; padding:5%;}
-	main {margin:0% -3%;}
+	main {margin:-3%;}
 }
 
 @media only screen and (min-width:769px) {
