--- a/poetryclub.css
+++ b/poetryclub.css
@@ -5,7 +5,7 @@
 	.slider {display:none;}
 	.panel {display:none;}
 	header #title {font-size:1.8em;letter-spacing:1px;}
-	nav a {display:block;}
+	nav a {display:none;}
 	footer a:last-child {display:block;}
 	section {background:#ffffff; padding:5%;}
 	main {margin:-3%;}
