--- a/poetryclub.css
+++ b/poetryclub.css
@@ -42,7 +42,7 @@ header {text-align:center;}
 
 #title {
 	padding:7% 4%;
-	font:normal 3.5em  "old standard tt", calibri, serif;
+	font:normal 3.6em  "old standard tt", bodoni, serif;
 	background:#ffffff;
 	text-transform:uppercase;
 	letter-spacing:17px;
