--- a/poetryclub.css
+++ b/poetryclub.css
@@ -6,7 +6,7 @@
 	.panel {display:none;}
 	header #title {font-size:2.3em;letter-spacing:4px;}
 	nav a {display:none;}
-	footer a:last-child {display:block;}
+	footer span {display:block;}
 	section {background:#ffffff; padding:5%;}
 }
 
@@ -235,3 +235,5 @@ footer {
 footer p:nth-child(1) {
 	padding-bottom:5px;
 }
+
+footer span {display:none;}
