--- a/poetryclub.css
+++ b/poetryclub.css
@@ -44,22 +44,22 @@ header {text-align:center;}
 
 #title {
 	padding:7% 4%;
-	font:normal 3.9em  "old standard tt", bodoni mt, serif;
+	font:normal 3.7em  "old standard tt", bodoni mt, serif;
 	background:#ffffff;
 	text-transform:uppercase;
 	letter-spacing:18px;
 }
 
 nav {
-	margin-left:-5%;
 	padding:15px;
 	background:#f5f5f5;
 }
 
 nav a {
+	padding-right:5%;
 	margin-left:5%;
-	font-size:0.88em;
 	text-transform:uppercase;
+	font-size:0.9em;
 	letter-spacing:2px;
 }
 
