--- a/poetryclub.css
+++ b/poetryclub.css
@@ -67,6 +67,7 @@ nav a:hover {color:#A78BC9;}
 
 body {
 	font:normal 14px "source sans pro", calibri, sans-serif;
+	line-height:100%;
 	background:#636363;
 }
 
