--- a/poetryclub.css
+++ b/poetryclub.css
@@ -68,7 +68,7 @@ nav a:hover {color:#A78BC9;}
 body {
 	font:normal 14px "source sans pro", calibri, sans-serif;
 	line-height:100%;
-	background:#636363;
+	background:#e2e2e2;
 }
 
 h1, h2, #title {font-family:"old standard tt", calibri, serif;}
