--- a/poetryclub.css
+++ b/poetryclub.css
@@ -229,8 +229,8 @@ ul {
 table {width:100%;}
 
 #modalcontainer2 ul {padding-left:2%;}
-#modalcontainer3 ul, #calendar2 ul {padding-left:5%;}
-#calender2 td:nth-child(2) {letter-spacing:1px;text-transform:uppercase;}
+#modalcontainer3 ul {padding-left:5%;}
+#calendar td:nth-child(2) {letter-spacing:1px;text-transform:uppercase;}
 
 /* Footer */
 
