--- a/poetryclub.css
+++ b/poetryclub.css
@@ -230,7 +230,7 @@ table {width:100%;}
 
 #modalcontainer2 ul {padding-left:2%;}
 #modalcontainer3 ul {padding-left:5%;}
-#calendar td:nth-child(2) {letter-spacing:1px;text-transform:uppercase;}
+#calendar span {letter-spacing:1px;text-transform:uppercase;}
 
 /* Footer */
 
