--- a/poetryclub.css
+++ b/poetryclub.css
@@ -146,7 +146,7 @@ ul {
 .slide {
 	background:#ffffff;
 	padding:5%;
-	height:60%;
+	height:500px;
 	overflow:scroll;
 	overflow-x:hidden;
 	display:none;
