--- a/poetryclub.css
+++ b/poetryclub.css
@@ -80,8 +80,8 @@ h1, h2 {
 	line-height:110%;
 }
 
-h1 {font-size:1.3em;font-weight:none;}
-h2 {font-size:1.08em;font-weight:none;}
+h1 {font-size:1.3em;}
+h2 {font-size:1.08em;}
 
 a {
 	color:#878787;
@@ -228,7 +228,7 @@ table {width:100%;}
 
 #modalcontainer2 ul {padding-left:2%;}
 #modalcontainer3 ul {padding-left:5%;}
-#calendar span {letter-spacing:0.5px;text-transform:uppercase;}
+#calendar span {letter-spacing:0.5px;text-transform:uppercase;font-size:0.97em;}
 
 /* Footer */
 
