--- a/poetryclub.css
+++ b/poetryclub.css
@@ -152,6 +152,11 @@ ul {
 	display:none;
 }
 
+.slide p {
+	color:#d5d5d5;
+	font-size:0.85em;
+}
+
 .active-slide {
 	display:block;
 }
@@ -228,7 +233,7 @@ table {width:100%;}
 
 #modalcontainer2 ul {padding-left:2%;}
 #modalcontainer3 ul {padding-left:5%;}
-#calendar span {letter-spacing:0.5px;text-transform:uppercase;font-size:0.97em;}
+#calendar span {letter-spacing:0.5px;text-transform:uppercase;font-size:0.85em;}
 
 /* Footer */
 
