--- a/poetryclub.css
+++ b/poetryclub.css
@@ -152,9 +152,9 @@ ul {
 	display:none;
 }
 
-.slide p:first-child {
+.slide p:nth-child(1) {
 	color:#d5d5d5;
-	font-size:0.93em;
+	font-size:0.95em;
 }
 
 .active-slide {
@@ -233,7 +233,7 @@ table {width:100%;}
 
 #modalcontainer2 ul {padding-left:2%;}
 #modalcontainer3 ul {padding-left:5%;}
-#calendar span {letter-spacing:0.5px;text-transform:uppercase;font-size:0.95em;}
+#calendar span {letter-spacing:0.5px;text-transform:uppercase;font-size:0.93em;}
 
 /* Footer */
 
