--- a/poetryclub.css
+++ b/poetryclub.css
@@ -7,6 +7,7 @@
 	header #title {font-size:2.2em;letter-spacing:8px;}
 	nav a {display:none;}
 	section {background:#ffffff; padding:5%;}
+	.panels {padding:4%;}
 }
 
 @media only screen and (min-width:769px) {
