--- a/poetryclub.css
+++ b/poetryclub.css
@@ -1,12 +1,12 @@
 /* Responsive */
 
 @media only screen and (max-width:769px) {
-	.container-fluid {min-width:calc(100% - 100px);}
+	.container-fluid {min-width:100%;}
 	.slider {display:none;}
 	.panel {display:none;}
 	header #title {font-size:2.2em;letter-spacing:8px;}
 	nav a {display:none;}
-	section {background:#ffffff; padding:5%;}
+	section {background:#ffffff; padding:4%;}
 }
 
 @media only screen and (min-width:769px) {
