--- a/poetryclub.css
+++ b/poetryclub.css
@@ -4,8 +4,9 @@
 	.container-fluid {min-width:100%;}
 	.slider {display:none;}
 	.panel {display:none;}
-	header #title {font-size:1.8em;letter-spacing:3px;}
+	header #title {font-size:1.3em;letter-spacing:2px;}
 	nav a {display:none;}
+	body {font-size:105%;}
 	section {background:#ffffff; padding:2% 5% 6% 5%;}
 }
 
