--- a/poetryclub.css
+++ b/poetryclub.css
@@ -10,9 +10,12 @@
 	section {background:#ffffff; padding:2% 5% 6% 5%;}
 }
 
+@media only screen and (min-width:400px;max-width:768px;) {
+	header #title{font-size:2.3em;}
+}
+
 @media only screen and (min-width:769px) {
 	section {display:none;}
-	header #title{font-size:2.3em;}
 }
 
 /* Scrollbar */
