--- a/poetryclub.css
+++ b/poetryclub.css
@@ -147,7 +147,7 @@ ul {
 .slide {
 	background:#ffffff;
 	padding:2%;
-	height:100%;
+	height:40em;
 	overflow:scroll;
 	overflow-x:hidden;
 	display:none;
