--- a/poetryclub.css
+++ b/poetryclub.css
@@ -45,10 +45,10 @@ header {text-align:center;}
 
 #title {
 	padding:7% 4%;
-	font:normal 3.5em  "old standard tt", bodoni mt, serif;
+	font:normal 3em  "old standard tt", bodoni mt, serif;
 	background:#ffffff;
 	text-transform:uppercase;
-	letter-spacing:6px;
+	letter-spacing:0.9em;
 }
 
 nav {
@@ -67,7 +67,7 @@ nav a {
 nav a:hover {color:#A78BC9;}
 
 body {
-	font:normal 15px "source sans pro", calibri, sans-serif;
+	font:normal 16px "source sans pro", calibri, sans-serif;
 	line-height:100.5%;
 	background:#eeeeee;
 }
