--- a/poetryclub.css
+++ b/poetryclub.css
@@ -3,6 +3,7 @@
 @media only screen and (max-width:768px) {
 	.container-fluid {min-width:90%;}
 	#calendar span {display:block;}
+	#mobhide {display:none;}
 }
 
 /* Scrollbar */
