--- a/poetryclub.css
+++ b/poetryclub.css
@@ -3,7 +3,7 @@
 @media only screen and (max-width:768px) {
 	.container-fluid {min-width:90%;}
 	#calendar span {display:block;padding:5% 0%;}
-	nav {min-width:100%;}
+	nav {text-align:center;}
 	#more, #mobhide {display:none;}
 }
 
