--- a/poetryclub.css
+++ b/poetryclub.css
@@ -4,7 +4,7 @@
 	.container-fluid {min-width:90%;}
 	#title {font-size:2.2em;}
 	#calendar span {display:block;padding:5% 0%;}
-	nav {text-align:center;min-width:100%;}
+	nav {margin:0px auto;min-width:90%;}
 	#more, #mobhide {display:none;}
 }
 
