--- a/poetryclub.css
+++ b/poetryclub.css
@@ -4,7 +4,8 @@
 	.container-fluid {min-width:90%;}
 	#title {font-size:2.2em;}
 	#calendar span {display:block;padding:5% 0%;}
-	nav {margin:0px auto;min-width:90%;}
+	nav {min-width:90%;}
+	nav a {margin-right:30%;}
 	#more, #mobhide {display:none;}
 }
 
