--- a/poetryclub.css
+++ b/poetryclub.css
@@ -2,10 +2,9 @@
 
 @media only screen and (max-width:768px) {
 	.container-fluid {min-width:90%;}
-	#title {font-size:2em;}
 	#calendar span {display:block;padding:5% 0%;}
 	nav {min-width:90%;}
-	nav a {margin-right:30%;}
+	nav a {margin-right:50px;}
 	#more, #mobhide {display:none;}
 }
 
