--- a/poetryclub.css
+++ b/poetryclub.css
@@ -2,6 +2,7 @@
 
 @media only screen and (max-width:768px) {
 	.container-fluid {min-width:90%;}
+	#title {font-size:2em!important;}
 	#calendar span {display:block;padding:5% 0%;}
 	nav {min-width:90%;}
 	nav a {margin-right:50px;}
