--- a/poetryclub.css
+++ b/poetryclub.css
@@ -5,6 +5,7 @@
 	#title {font-size:2.2em!important;}
 	#calendar span {display:block;padding:5% 0%;}
 	nav {min-width:100%;}
+	.mlast {margin-right:0px;}
 	#more, .last {display:none;}
 }
 
