--- a/poetryclub.css
+++ b/poetryclub.css
@@ -6,7 +6,7 @@
 	#calendar span {display:block;padding:5% 0%;}
 	nav {min-width:100%;}
 	.mlast {margin-right:0px;}
-	#more, .last {display:none;}
+	.last {display:none;}
 }
 
 /* Scrollbar */
