--- a/poetryclub.css
+++ b/poetryclub.css
@@ -7,7 +7,7 @@
 	nav {min-width:100%;}
 	.mlast {margin-right:0px;}
 	#more, .last {display:none;}
-	#mshow {display:block;}
+	.mshow {display:block;}
 }
 
 /* Scrollbar */
@@ -72,6 +72,7 @@ nav {
 
 nav a {margin-right:30px;}
 .last {margin-right:0px;}
+.mshow {display:none;}
 
 #more {
 	cursor:pointer;
