--- a/poetryclub.css
+++ b/poetryclub.css
@@ -73,6 +73,7 @@ nav {
 nav a {margin-right:30px;}
 .last {margin-right:0px;}
 .mshow {display:none;}
+.mshow a {display:block;}
 
 #more {
 	cursor:pointer;
