--- a/poetryclub.css
+++ b/poetryclub.css
@@ -8,7 +8,7 @@
 	.mlast {margin-right:0px;}
 	#more, .last {display:none;}
 	.mshow {display:block!important;}
-	iframe {width:100%;}
+	iframe {width:auto!importat;height:auto!important;}
 }
 
 /* Scrollbar */
