--- a/poetryclub.css
+++ b/poetryclub.css
@@ -153,6 +153,7 @@ section:last-child {
 	font-family:"old standard tt", serif;
 	font-size:2.2em;
 	margin-right:1em;
+	line-height:110%;
 	vertical-align:top;
 }
 
