--- a/poetryclub.css
+++ b/poetryclub.css
@@ -1,7 +1,7 @@
 /* Responsive */
 
 @media only screen and (max-width:768px) {
-	.container-fluid {min-width:100%;}
+	.container-fluid {min-width:90%;}
 	#title {font-size:3.2em!important;}
 	#calendar span {display:block;padding:5% 0%;}
 	nav {min-width:100%;}
@@ -39,7 +39,7 @@ html, body {
 }
 
 .container-fluid {
-	width:700px;
+	width:700px / 70%;
 	margin:auto;
 	background:#ffffff;
 	border-left:1px solid #eeeeee;
