--- a/poetryclub.css
+++ b/poetryclub.css
@@ -39,7 +39,7 @@ html, body {
 }
 
 .container-fluid {
-	width:700px / 70%;
+	width:700px;
 	margin:auto;
 	background:#ffffff;
 	border-left:1px solid #eeeeee;
