--- a/poetryclub.css
+++ b/poetryclub.css
@@ -24,7 +24,7 @@ html, body {
 }
 
 .container-fluid {
-	width:60%;
+	width:750px;
 	margin:auto;
 	background:#ffffff;
 	border-left:1px solid #eeeeee;
